// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput renders - error, not touched yet 1`] = `
<Styled(ViewNB)
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Styled(Item)
    error={false}
  >
    <Styled(Input)
      autoCapitalize="none"
      keyboardType={null}
      maxLength={null}
      numberOfLines={null}
      placeholder="thisField"
      secureTextEntry={true}
    />
  </Styled(Item)>
  <Styled(ViewNB)>
    <Styled(Text)
      style={
        Object {
          "color": "red",
          "fontSize": 14,
          "paddingLeft": 4,
          "paddingTop": 2,
        }
      }
    />
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;

exports[`FormInput renders - errors, touched 1`] = `
<Styled(ViewNB)
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Styled(Item)
    error={true}
  >
    <Styled(Input)
      autoCapitalize="none"
      keyboardType={null}
      maxLength={null}
      numberOfLines={null}
      placeholder="thisField"
      secureTextEntry={true}
    />
    <Styled(Icon)
      name="alert"
    />
  </Styled(Item)>
  <Styled(ViewNB)>
    <Styled(Text)
      style={
        Object {
          "color": "red",
          "fontSize": 14,
          "paddingLeft": 4,
          "paddingTop": 2,
        }
      }
    >
      Enter a valid email address.
    </Styled(Text)>
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;
